[GStreamer][WebRTC] Local/remote ICE candidates stats gathering support https://bugs.webkit.org/show_bug.cgi?id=240949

Patch by Philippe Normand <philn@igalia.com> on 2022-05-26
Reviewed by Xabier Rodriguez-Calvar.

The corresponding feature was implemented in GStreamer as part of:
https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/1998

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/Modules/mediastream/gstreamer/GStreamerStatsCollector.cpp:
(WebCore::iceCandidateType):
(WebCore::fillRTCCandidateStats):
(WebCore::fillRTCCandidatePairStats):
(WebCore::fillReportCallback):

Canonical link: https://commits.webkit.org/251009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294879 268f45cc-cd09-0410-ab3c-d52691b4dbfc